# EDTH

./: README.md
TAALOS/: .gitignore  README.md  pyproject.toml
TAALOS/src/: inference_video.py  main.py  webcam_uav.py
TAALOS/src/core/: motor.py  uav_detector.py  uav_tracker.py  uav_tracking_system.py
TAALOS/src/utils/: bbox.py
