[project]
name = "taalos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "opencv-contrib-python==4.9.0.80",
    "pyserial>=3.5",
    "serial>=0.0.97",
    "supervision==0.26.1",
    "ultralytics==8.3.226",
]
